- Added more examples and challenges for streams.